# tesserae-device-esp32-bw

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
include/: app_config.h  secrets.example.h
src/: CMakeLists.txt  epd_driver.c  epd_driver.h  heartbeat.c  image_decoder.c  image_fetcher.c  image_fetcher.h  main.c
tools/: gen_splash.py  release.sh
